--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh">
   <head>
     <meta charset="UTF-8" />
-    <title>❤️</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/three.js/r100/three.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Heart Beat</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    </body>
-  <script src="script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.131.3/examples/js/math/MeshSurfaceSampler.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.131.3/examples/js/controls/TrackballControls.js"></script>
+    <script src="https://assets.codepen.io/127738/simplex-noise.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.131.3/examples/js/loaders/OBJLoader.js"></script>
+    <script src="https://unpkg.co/gsap@3/dist/gsap.min.js"></script>
+    <script src="script.js"></script>
+  </body>
 </html>
